--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -34,10 +34,16 @@
     <ClCompile Include="Core.cpp">
       <Filter>01.Core</Filter>
     </ClCompile>
+    <ClCompile Include="Console.cpp">
+      <Filter>01.Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h">
       <Filter>01.Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Console.h">
+      <Filter>99.Headers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
