--- a/cppTeamPj/cppTeamPj.vcxproj
+++ b/cppTeamPj/cppTeamPj.vcxproj
@@ -129,14 +129,20 @@
   <ItemGroup>
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="Core.cpp" />
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="KeyContoller.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlayerContoller.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="Enums.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="KeyContoller.h" />
+    <ClInclude Include="PlayerContoller.h" />
+    <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
