--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="Scenes.cpp">
       <Filter>04.Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>03.Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -88,6 +91,9 @@
       <Filter>99.Headers</Filter>
     </ClInclude>
     <ClInclude Include="Scenes.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
       <Filter>99.Headers</Filter>
     </ClInclude>
   </ItemGroup>
