--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -59,7 +59,7 @@
       <Filter>04.Scene</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>03.Object</Filter>
+      <Filter>01.Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
