--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -59,7 +59,10 @@
       <Filter>04.Scene</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>01.Core</Filter>
+      <Filter>03.Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Sheild.cpp">
+      <Filter>03.Object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +97,9 @@
       <Filter>99.Headers</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Sheild.h">
       <Filter>99.Headers</Filter>
     </ClInclude>
   </ItemGroup>
