--- a/cppTeamPj/cppTeamPj.vcxproj
+++ b/cppTeamPj/cppTeamPj.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="InfoScene.cpp" />
     <ClCompile Include="KeyContoller.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="InfoScene.h" />
     <ClInclude Include="KeyContoller.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerContoller.h" />
