--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -64,8 +64,15 @@
     <ClCompile Include="Sheild.cpp">
       <Filter>03.Object</Filter>
     </ClCompile>
-    <ClCompile Include="InfoScene.cpp" />
-    <ClCompile Include="EnemyManager.cpp" />
+    <ClCompile Include="InfoScene.cpp">
+      <Filter>04.Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>02.Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="CreditScene.cpp">
+      <Filter>04.Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -104,7 +111,14 @@
     <ClInclude Include="Sheild.h">
       <Filter>99.Headers</Filter>
     </ClInclude>
-    <ClInclude Include="InfoScene.h" />
-    <ClInclude Include="EnemyManager.h" />
+    <ClInclude Include="InfoScene.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditScene.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
