--- a/cppTeamPj/cppTeamPj.vcxproj
+++ b/cppTeamPj/cppTeamPj.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="IHitable.h" />
     <ClInclude Include="InfoScene.h" />
     <ClInclude Include="KeyContoller.h" />
     <ClInclude Include="Player.h" />
