--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="CreditScene.h">
       <Filter>99.Headers</Filter>
     </ClInclude>
+    <ClInclude Include="IHitable.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
