--- a/cppTeamPj/cppTeamPj.vcxproj
+++ b/cppTeamPj/cppTeamPj.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="InfoScene.cpp" />
     <ClCompile Include="KeyContoller.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Enums.h" />
+    <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="IHitable.h" />
     <ClInclude Include="InfoScene.h" />
