--- a/cppTeamPj/cppTeamPj.vcxproj.filters
+++ b/cppTeamPj/cppTeamPj.vcxproj.filters
@@ -73,11 +73,19 @@
     <ClCompile Include="CreditScene.cpp">
       <Filter>04.Scene</Filter>
     </ClCompile>
-    <ClCompile Include="ScoreManager.cpp" />
     <ClCompile Include="GameOverScene.cpp">
       <Filter>04.Scene</Filter>
     </ClCompile>
     <ClCompile Include="GameOverManager.cpp" />
+    <ClCompile Include="ScoreManager.cpp">
+      <Filter>02.Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerEnemy.cpp">
+      <Filter>03.Object</Filter>
+    </ClCompile>
+    <ClCompile Include="ShieldEnemy.cpp">
+      <Filter>03.Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -135,6 +143,12 @@
       <Filter>99.Headers</Filter>
     </ClInclude>
     <ClInclude Include="GameOverManager.h" />
+    <ClInclude Include="PlayerEnemy.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="ShieldEnemy.h">
+      <Filter>99.Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
